bk_ida/gccida/c2/queue_and_dump_index
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/queue_and_dump_index/src/tree-dump.c:616:24: error: use of undeclared identifier 'off_71BF36'
fprintf( di_0->stream, off_71BF36, v15, 6552963LL); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/queue_and_dump_index/src/tree-dump.c:622:24: error: use of undeclared identifier 'asc_71BF35'
fprintf( di_0->stream, asc_71BF35, 25LL, 6552963LL); 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/queue_and_dump_index/src/obj/tree-dump.o] Error 1
